--- a/.classpath
+++ b/.classpath
@@ -22,6 +22,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Fabien/Downloads/jettison-1.3.3.jar"/>
+	<classpathentry kind="lib" path="F:/Telecom/webservice/jettison-1.3.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
