--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,16 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.sun.jersey.glassfish.v3.osgi</groupId>
+  		<artifactId>jettison</artifactId>
+  		<version>1.0.3.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.ws.rs</groupId>
+  		<artifactId>javax.ws.rs-api</artifactId>
+  		<version>2.1-m01</version>
+  	</dependency>
+  </dependencies>
 </project>
